Added employee list and customer display
